# AutoSimCarla

./: README.md  __init__.py  automatic_control.py  configs.yaml  data_descriptor.py  data_saver.py  data_utils.py  display.py  export_utils.py  generate_bags.py  requirements.txt  sensor.py  utils.py  visulization.py  world.py
cloud_msgs/: CMakeLists.txt  package.xml
cloud_msgs/msg/: cloud_info.msg  trackbox.msg  trackers.msg
examples/: one_frame_visulization.py  test_poses.py  vis_bboxes2D.py
